# krusty

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  config.json  config.sample.json  config.sample.yaml  diesel.toml  docker-compose.yaml  podman-compose.yaml
.github/workflows/: build.yaml  lint.yaml  tag.yaml  workflow-lint.yaml
examples/: experimental.rs  new_response_format.rs  new_zkill_format.rs
helm/: Chart.yaml  values.prod.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
k8s/: configmap.example.yaml  deployment.yaml  pvc.yaml  service.yaml
migrations/2025-12-21-103003-0000_create_filter_sets/: down.sql  up.sql
migrations/2025-12-24-235141-0000_analytics_killmails/: down.sql  up.sql
script/: inject-secrets.py  pre-tag.bash  pre-tag.py  pyproject.toml
src/: cache.rs  config.rs  lib.rs  main.rs  otel.rs  static_data.rs  zkb.rs
src/config/: mod.rs
src/discord/: command.rs  mod.rs
src/discord/command/: filter_add_command.rs  filter_clear_command.rs  filter_list_command.rs  filter_remove_command.rs  mod.rs  sample_command.rs  test_command.rs
src/filters/: mod.rs  tests.rs
src/persistence/: cache.rs  filters.rs  memory.rs  mod.rs
src/persistence/provider/: memory.rs  mod.rs  redis.rs
src/persistence/provider/postgres/: mod.rs  model.rs  schema.rs
static/: mapSolarSystemsTrimmed.csv
tempo/: config.yaml
