[package]
name = "krusty"
version = "3.2.0"
edition = "2024"

[features]
postgres-tests = []
redis-tests = []

[dependencies]
anyhow = "1.0.100"
diesel = { version = "2.3.2", features = ["postgres", "postgres_backend", "r2d2", "uuid", "chrono", "serde_json"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
hyper-util = "0.1.19"
opengraph = "0.2.4"
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
simd-json = "0.17.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "json"] }
tracing-appender = "0.2.4"
tungstenite = "0.28.0"
twilight-gateway = "0.17.0"
twilight-http = { version = "0.17.0", features = ["rustls-webpki-roots"] }
twilight-model = "0.17.0"
twilight-util = { version = "0.17.0", features = ["builder"] }
uuid = { version = "1.19.0", features = ["v4"] }
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["tokio", "logs", "trace"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "logs", "trace"] }
opentelemetry-appender-tracing = "0.31.0"
redis = "1.0.1"
serde_yaml = "0.9.34-deprecated"
rust-embed = "8.9.0"
tokio-util = "0.7"
lazy_static = "1.5.0"
csv = "1.4.0"
sha2 = "0.10.9"
rustls = { version = "0.23.35", features = ["ring"] }
r2d2 = "0.8.10"
serde_json = "1.0.147"
regex = "1.12.2"
