[project]
name = "krusty-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Alfred Dobradi",email = "alfreddobradi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
